--- a/recipeapp/style.css
+++ b/recipeapp/style.css
@@ -17,7 +17,7 @@ section {
 }
 .row {
   position: relative;
-  top: -35%;
+  top: -40%;
   left: -5%;
   width: 100%;
   display: flex;
@@ -46,7 +46,7 @@ section .row div {
   animation-delay: -80s;
 }
 section .row div:nth-child(2) {
-  animation: animate2 80s linear infinite;
+  animation: animate3 80s linear infinite;
   animation-delay: -10s;
 }
 @keyframes animate1 {
@@ -63,6 +63,30 @@ section .row div:nth-child(2) {
   }
   100% {
     transform: translateX(-100%);
+  }
+}
+section .row div {
+  animation: animate2 80s linear infinite;
+  animation-delay: -80s;
+}
+section .row:nth-child(even) div:nth-child(2) {
+  animation: animate4 80s linear infinite;
+  animation-delay: -5s;
+}
+@keyframes animate3 {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+@keyframes animate4 {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0%);
   }
 }
 
